@@ -7339,6 +7339,7 @@ zxvision_known_window_names zxvision_known_window_names_array[]={
     {"hexeditor",menu_debug_hexdump},
     {"corestatistics",menu_about_core_statistics},
     {"viewsensors",menu_debug_view_sensors},
+    {"visualrealtape",menu_visual_realtape},
 
 	{"",NULL} //NO BORRAR ESTA!!
 };
@@ -27441,7 +27442,7 @@ void menu_tape_settings(MENU_ITEM_PARAMETERS)
 		menu_add_item_menu_tooltip(array_menu_tape_settings,"Browse Real tape");
 		menu_add_item_menu_ayuda(array_menu_tape_settings,"Browse Real tape");				
 
-
+        menu_add_item_menu_format(array_menu_tape_settings,MENU_OPCION_NORMAL,menu_visual_realtape,menu_realtape_cond,"Visual Real Tape");
 
                 menu_add_item_menu(array_menu_tape_settings,"",MENU_OPCION_SEPARADOR,NULL,NULL);
 
