@@ -1064,6 +1064,9 @@ extern void menu_dandanator(MENU_ITEM_PARAMETERS);
 extern void menu_interface_change_gui_style_apply(MENU_ITEM_PARAMETERS);
 extern void menu_interface_charwidth_after_width_change(void);
 extern void menu_interface_allow_background_windows_delete_windows(void);
+extern void menu_realtape_pause_unpause(MENU_ITEM_PARAMETERS);
+extern void menu_reinsert_real_tape(void);
+extern int menu_realtape_cond(void);
 
 extern int timer_osd_keyboard_menu;
 
