@@ -996,4 +996,6 @@ extern int util_get_cosine(int degrees);
 extern int util_get_sine(int degrees);
 extern int util_compare_bytes_address(menu_z80_moto_int dir,int *lista,int total_items);
 
+extern void util_print_minutes_seconds(int segundos_totales, char *texto);
+
 #endif
