@@ -28,6 +28,7 @@ Added --slotcard-num setting to insert a Z88 card in a numbered slot (1, 2 or 3)
 Added ZRCP command mmc-reload to reload MMC image
 Added ZEsarUX logo on the window footer
 Added wav/rwa/smp tape audio browser, to view Spectrum/ZX80/ZX81 tape blocks from audio file
+Added Visual Real Tape to see loading "wave"
 
 Added file converters: 
 - wav/rwa/smp to tap
